<resources>
    <string name="app_name" translatable="false">Film Tracker</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="log_in_text">Log in</string>
    <string name="not_registered_yet_text">Register now!</string>
    <string name="repeat_password_text">Repeat Password</string>
    <string name="sign_up_text">Sign up</string>
    <string name="already_registered_text">I already have an account</string>
    <string name="not_registered_yet_question_text">Not registered yet?</string>
    <string name="register_password_not_equals">Passwords do not match</string>
    <string name="register_bad_format_email">Write the email correctly</string>
    <string name="register_go_back_text">Go back to Log In</string>
    <string name="register_password_too_short">Must have at least 6 characters</string>
    <string name="register_successful">Successfully registered</string>
    <string name="register_failure">Registration failure. Try later.</string>
    <string name="login_or">or</string>
    <string name="login_google">Log In with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bottom_menu_profile">Profile</string>
    <string name="language">en</string>
    <string name="bottom_menu_likes">Likes</string>
    <string name="bottom_menu_films">Films</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_watched_films">Watched films</string>
    <string name="text_favorite_films">Favorite  films</string>
    <string name="text_comments">Comments</string>
    <string name="button_logout">Log out</string>
    <string name="text_details_synopsis">Synopsis</string>
    <string name="text_card_about">ABOUT</string>
    <string name="text_details_genres">Genre</string>
    <string name="spinner_details_1">Appalling</string>
    <string name="spinner_details_2">Horrible</string>
    <string name="spinner_details_3">Very bad</string>
    <string name="spinner_details_4">Bad</string>
    <string name="spinner_details_5">Average</string>
    <string name="spinner_details_6">Fine</string>
    <string name="spinner_details_7">Good</string>
    <string name="spinner_details_8">Very good</string>
    <string name="spinner_details_9">Great</string>
    <string name="spinner_details_10">Masterpiece</string>
    <string name="spinner_details_null_rating">Have seen</string>
    <string name="spinner_details_unwatched">Unwatched</string>
    <string name="text_details_film_opinion">Did you like this film?</string>
    <string name="spinner_details_watching">Watching</string>
    <string name="spinner_details_planned_to_watch">Planned to watch</string>
    <string name="text_comment">Comment...</string>
    <string name="chat_spinner_loading">Loading friends</string>
    <string name="chat_without_friends">You don\'t have any friends!</string>
    <string name="chat_add_friends_text">Enter your friend\'s email or username to send a request</string>
    <string name="chat_add_friends_user">User</string>
    <string name="add">Add</string>
    <string name="chat_add_dialog_title">Add a friend</string>
    <string name="text_rating">Rating:</string>
    <string name="text_favorite">Favorite:</string>
    <string name="button_welcome">WELCOME</string>
    <string name="principal_chat_private">Private</string>
    <string name="principal_chat_group">Groups</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="chat_spinner_loading_group">Loading groups</string>
    <string name="dialog_group_name">Enter a name for the group</string>
    <string name="dialog_group_name_hint">Group name</string>
    <string name="dialog_create_group">Create group</string>
    <string name="dialog_name_cant_be_null">The group name cannot be empty</string>
    <string name="films_loading_films">Loading films</string>
    <string name="likes_doesnt_exists">There are no movies in favorites</string>
    <string name="vote_dialog_create_info">Type the name of a movie or a text to start the vote</string>
    <string name="vote_dialog_create_write">Write...</string>
    <string name="vote_dialog_create_title">Create vote</string>
    <string name="vote_film">Vote for a movie</string>
    <string name="vote_film_finish">Voting completed!</string>
    <string name="vote_view_results">View results</string>
    <string name="vote_friend_rating">Your friend\'s ratings</string>
    <string name="vote_results">Vote results</string>
    <string name="vote_waiting">Waiting for the rest</string>
    <string name="vote_start">Start voting</string>
    <string name="group_create">Create group</string>
    <string name="group_create_add_name">Add a group name</string>
    <string name="charge_email_failure">An error occurred while loading your email</string>
    <string name="user_not_found">User has not been found</string>
    <string name="user_added_succed">The user was successfully added</string>
    <string name="load_friends_data_failure">An error occurred while uploading your friends\' data</string>
    <string name="logged_correct">You are successfully logged in</string>
    <string name="logged_incorrect">You have not been able to log in correctly</string>
    <string name="login_data_error">An error occurred while loading the data</string>
    <string name="vote_confirm_toast">The vote has been carried out correctly</string>
    <string name="vote_failure">An error occurred while voting</string>
    <string name="vote_complete_toast">A vote has ended!</string>
</resources>