<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottomMenuProfile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/bottom_menu_profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottomMenuFilms"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_local_movies_24"
        android:title="@string/bottom_menu_films"
        app:showAsAction="always"/>
    <item
        android:id="@+id/bottomMenuLikes"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/bottom_menu_likes"
        app:showAsAction="always"/>
</menu>